# Rust-Tauri-Todo-Remake

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
